test/errors/modify_non_lval.li
10--;
10++;
10 += 1;
10 -= 1;
10 *= 1;
10 /= 1;
10 %= 1;
"Hello"++;
"Hello"--;
"Hello" += "World";
"Hello" -= "World";
"Hello" *= "World";
"Hello" /= "World";
"Hello" %= "World";
true++;
true--;
true += false;
true -= false;
true *= false;
true /= false;
true %= false;
